Final touches, hopefully